# chat-ui-monorepo

./: .easignore  .gitignore  .lintstagedrc.json  .pnpmfile.cjs  .prettierignore  .prettierrc  AGENTS.md  IMPLEMENTATION_PLAN.md  README.md  RESEARCH_ZOD_BINARY_DATA.md  SECURITY.md  eslint.config.js  mise.toml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json
.beads/backup/: backup_state.json  comments.jsonl  config.jsonl  dependencies.jsonl  events.jsonl  issues.jsonl
.changeset/: hot-socks-fly.md  reliable-mobile-push.md
.github/workflows/: check-openapi.yml  ci.yml  codeql.yml  dev-apk.yml  dev-mobile.yml  mobile-ios-build.yml  npm-audit.yml  release-apk.yml  release-mobile.yml  release-pr-mobile.yml  release-pr.yml  scorecard.yml  socket.yml  update-vex-protocol-deps.yml
.husky/: pre-commit
.verdaccio/: config.yaml
apps/desktop/: .lintstagedrc.json  .prettierrc  (+5 more)
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/src/: lib.rs
docs/: architecture.md  auth-comparison.md  config.md  design-system.md  desktop-reimplementation.md  dev-workflows.md  glossary.md  infrastructure.md  logging.md  migration-from-upstream.md  openapi-strategy.md  packages-libvex.md  packages-store-ui.md  packages.md  platform-strategy.md  react-native-monorepo.md  scalability.md  testing-strategy.md  vex-overview.md  websocket.md
scripts/: bootstrap.sh  clean-dev.sh  fingerprint-diff.mjs  install-local.sh  mise-android-postinstall.sh  publish-local.sh  update-vex-chat-catalog.mjs
(+394 files in other folders)
